--- a/index.html
+++ b/index.html
@@ -13,107 +13,85 @@
 </head>
 
 <body>
+    <!--Menu-->
     <nav>
+        <div class="logo">
+            <img src="img/logo.png" alt="LOGO">
+        </div>
         <ul>
+         <a href="#"><li>Sobre mim</li></a>
+         <a href="#"><li>Hobbies</li></a>
+         <a href="#"><li>Portifólio</li></a>
+         <a href="#"><li>Contato</li></a>
+        </ul>
+        <div class="redes">
             <img src="img/git.png" alt="">
             <img src="img/lin.png" alt="">
             <img src="img/ins.png" alt="">
             <img src="img/whats.png" alt="">
-        </ul>
+        </div>
     </nav>
-    <!--Minha foto como logo-->
-    <div class="global">
-        <img src="img/danilo.png" alt="Eu sou o Danilo">
-    </div>
-    <!--Criando meu título-->
-    <div class="titulo">
-        <div class="comeco">
-            <h1>Meu nome é Danilo tenho 27 anos.</h1>
+    <!--Banner do meu projeto-->
+    <div class="banner">
+        <div id="sobre">
+           <div class="sobremim">
+            <h1>Sobre mim<strong>.</strong></h1>
+           <p> Meu nome é <strong>Danilo</strong> tenho <strong>27 anos.</strong> 
+            Tenho conhecimentos na área de <strong>Administração , com experiência em:</strong> Serviços de auxílio processual, estruturando e organizando os arquivos e documentos; elaboração e preenchimento de planilhas e formulários; operação de sistemas de controle processual; autuação de processos e redação de documentos.</p>
+           </div>
         </div>
-        <div class="continua">
-            <p>Tenho conhecimentos na área de Administração, com experiência em serviços de auxílio processual,
-                estruturando e organizando os arquivos e documentos; elaboração e preenchimento de planilhas e
-                formulários; operação de sistemas de controle processual; autuação de processos e redação de documentos.
-            </p>
-        </div>
-    </div>
-    <!--Sobre mim-->
-    <div class="skill">
-        <div class="efeito"><img src="img/console.png" alt="Hobbie">
-            <h1>Hobbies</h1>
-            <ul>
-                <li>Igreja</li>
-                <li>Esportes</li>
-                <li>Desenho</li>
-                <li>Assistir série</li>
-                <li>Viajar</li>
-                <li>Comer</li>
-                <li>Dormir</li>
-            </ul>
-        </div>
-        <div class="efeito"><img src="img/boletim.png" alt="Formacoes">
-            <h1>Formações</h1>
-            <ul>
-                <li>Ensino Médio Completo</li>
-                <li>Curso de Administração</li>
-                <li>Curso de Contratos e Licitações</li>
-                <li>Inglês Básico</li>
-                <li>Informática</li>
-                <li>Excel Avançado</li>
-                <li>Aprendizagem online</li>
-
-            </ul>
-        </div>
-        <div class="efeito"><img src="img/expectativa.png" alt="Interesses">
-            <h1>Interesses</h1>
-            <ul>
-                <li>Línguas estrangeiras</li>
-                <li>Programação</li>
-                <li>Natureza</li>
-                <li>Música</li>
-                <li>Fotografia</li>
-
-            </ul>
+        <div id="eu">
+            <div class="foto">
+                <img src="img/danilo.png" alt="EU">
+            </div>
         </div>
     </div>
-    <!--Meus Trabalhos-->
-    <div class="portifolio">
-        <h1>Portifólio</h1>
-    </div>
-    <div class="trabalhos">
-        <a href="https://scratch.mit.edu/projects/749269798/"><img src="img/Galeria/trabalho1.png" alt="TRABALHOS"></a>
-        <a href="https://scratch.mit.edu/projects/749417024/"><img src="img/Galeria/trabalho2.png" alt="TRABALHOS"></a>
-        <a href="https://scratch.mit.edu/projects/749419362/"><img src="img/Galeria/trabalho3.png" alt="TRABALHOS"></a>
-    </div>
-    <!--Meu formulário-->
-    <div class="ctt">
-        <h1>Contato</h1>
-        <div class="form">
-            <form>
-                <fieldset>
-                    <div>
-                        <label for="nome">Nome</label>
-                        <input type="text" name="nome" id="nome">
-                    </div>
-                    <div>
-                        <label for="email">Email</label>
-                        <input type="email" name="email" id="email">
-                    </div>
-                    <div>
-                        <label>Mensagem</label>
-                        <textarea name="txt" id="txt" cols="30" rows="10"></textarea>
-                        <button>Enviar</button>
-                    </div>
-                </fieldset>
-            </form>
+        <!--Area de Hobbies-->
+    <div class="hobbies">
+        <div id="fotoh">
+            <img src="img/hobby.png" alt="Hobbies">
+        </div>
+        <div id="meush">
+            <h1>Meus Hobbies<strong>.</strong></h1>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sint quam alias quas, mollitia illum enim culpa labore officia exercitationem praesentium neque ullam ipsam quia eaque, repudiandae eius voluptas possimus atque.</p>
+            <div class="iconesh">
+                <img src="img/bola-de-futebol.png" alt="futebol">
+                <img src="img/controle-de-video-game.png" alt="video-game">
+                <img src="img/excelencia.png" alt="programar">
+                <img src="img/casal.png" alt="namorar">
+                <img src="img/reprodutor-de-musica.png" alt="música">
+            </div>
         </div>
     </div>
-    <!--Meu rodapé-->
-    <footer>
-        <div class="rodape">
-            <p>DANILO SANTOS - MÓDULO 1</p>
+    <div class="projetos">
+        <div id="projetot"><h1>Projetos<strong>.</strong></h1></div>
+        <div id="galeria">
+            <img src="img/Galeria/trabalho1.png" alt="trabalho1">
+            <img src="img/Galeria/trabalho2.png" alt="trabalho2">
+            <img src="img/Galeria/trabalho3.png" alt="trabalho3">
         </div>
-    </footer>
-</body>
-
-</html>
+    </div>
+    <!--Area de contato-->
+    <div class="cttt"><h1>Contato <strong>.</strong></h1></div>
+    <div class="contato">
+        <div id="ctt">
+        <label for="usuario">Nome</label>
+        <input type="text" name="nome" id="nome" placeholder="Nome">
+        <label for="usuario">Email</label>
+        <input type="email" name="email" id="email" placeholder="Email">
+        <label for="usuario">Mensagem</label>
+        <textarea name="texto" id="texto" cols="30" rows="10"></textarea>
+        <div id="btt">
+            <button>Enviar</button>
+            <button>Apagar</button>
+        </div>
+        </div>
+    </div>
+        <!--Meu rodapé-->
+        <footer>
+            <div class="rodape">
+                <p>DANILO SANTOS - MÓDULO 1</p>
+            </div>
+        </footer>
+</body>    
+  
