--- a/index.html
+++ b/index.html
@@ -53,7 +53,9 @@
         </div>
         <div id="meush">
             <h1>Meus Hobbies<strong>.</strong></h1>
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sint quam alias quas, mollitia illum enim culpa labore officia exercitationem praesentium neque ullam ipsam quia eaque, repudiandae eius voluptas possimus atque.</p>
+            <p>Os <strong>hobbies</strong> são atividades ou passatempos que são realizados regularmente em seu tempo livre.</p>
+            <p>Quando estou em casa gosto de relaxar, ouvir música quando estou fazendo algo me ajuda nessa questão.Também sempre tiro pelo menos um dia da minha semana para jogar futebol com os meus amigos, acredito que isso seja um aliado para esquecer os problemas.Minha rotina é muito corrida, então sempre que estou de folga procuro fazer algo com a minha namorada, sair para comer alguma coisa, fazer trilhas, assistir algum filme e etc.</p>
+            <p>Programar também pode se dizer que se tornou um hobbie, sempre me interessei pela área mas nunca me aprofundei, é um lugar onde eu posso criar tudo que minha imaginação me permitir, e é muito gratificante ver o resultado ao final de tudo.</p>
             <div class="iconesh">
                 <img src="img/bola-de-futebol.png" alt="futebol">
                 <img src="img/controle-de-video-game.png" alt="video-game">
